<resources>
    <!--  문자열 리소스를 정의  -->
    <string name="app_name">ch03_resource</string>
    <string name="welcome_message">hello~ welcome!</string>
    <string name="btn_text">Click me!</string>
    <string name="text2">Text View Text</string>
    <string name="hello">Hello!!</string>

    <string name="intro_main">
    Find your phone contacts on Messenger
    </string>
    <string name="intro_detail">
    Continuously uploading your contacts helps Facebook and Messenger suggest connections
    and provide and improve ads for you and others, and offer a better service.
    </string>
    <string name="intro_more">Learn More</string>
    <string name="intro_button">TRUN ON</string>
    <string name="intro_delay">NOT NOW</string>
</resources>