<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/intro"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/intro_main"
        style="@style/Intro1"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/intro_detail"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="23dp"
        android:textSize="14dp"/>


    <Button
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="210dp"
        android:background="@drawable/intro_button"
        android:text="@string/intro_button"
        android:textSize="18dp"/>


        <Button
            android:layout_width="380dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/intro_button2"
            android:text="@string/intro_delay"
            android:textSize="18dp"
            android:textColor="@color/black"/>




</LinearLayout>